@@ -45,6 +45,8 @@ documents those changes that are of interest to users and administrators.
     databases will succeed.
  -- Remove stray newlines in SPANK plugin error messages.
  -- Fix archive loading events.
+ -- In select/cons_tres: Only allocate 1 CPU per node with the --overcommit and
+    --nodelist options.
 
 * Changes in Slurm 18.08.7
 ==========================
